unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/FeePaid__c.field-meta.xml
<CustomField>
    <fullName>FeePaid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fee Paid</label>
    <type>Checkbox</type>
</CustomField>