unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/ProjectionAmount__c.field-meta.xml
<CustomField>
    <fullName>ProjectionAmount__c</fullName>
    <label>Projection Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>