unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/TxNetPrice__c.field-meta.xml
<CustomField>
    <fullName>TxNetPrice__c</fullName>
    <label>Tx Net Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>